Fixed add btn iphone align self flex end compatibility

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -57,7 +57,7 @@ margin-right: 45px;
 
 
 .add-direct-btn {
-  align-self: end;
+  align-self: flex-end;
   font-size: 15px;
   margin-right: 35px;
   margin-bottom: 15px;
